[package]
name = "dtg"
version = "1.0.1"
authors = ["qtfkwk <qtfkwk@gmail.com>"]
edition = "2018"
homepage = "https://github.com/qtfkwk/dtg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
chrono-tz = "0.5.3"

[dev-dependencies]
assert_cmd = "1.0.2"
