[package]
name = "dtg"
version = "6.4.1"
edition = "2024"
repository = "https://github.com/qtfkwk/dtg"
description = "Date/time CLI utility"
license = "MIT"

[dependencies]
clap = { version = "4.5.50", features = ["derive", "wrap_help"] }
clap-cargo = "0.18.3"
clearscreen = "4.0.2"
dtg-lib = { version = "6.4.0", path = "../lib" }
iana-time-zone = "0.1.64"
jiff = "0.2.15"

[target.'cfg(unix)'.dependencies]
pager2 = "0.6.1"

[dev-dependencies]
assert_cmd = "2.0.17"
