[package]
name = "dtg-lib"
version = "5.5.1"
edition = "2021"
repository = "https://github.com/qtfkwk/dtg"
description = "Date/time library"
license = "MIT"

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
chrono-tz = "0.8.3"
iana-time-zone = "0.1.57"
lazy_static = "1.4.0"
