[package]
name = "dtg-lib"
version = "5.8.0"
edition = "2021"
repository = "https://github.com/qtfkwk/dtg"
description = "Date/time library"
license = "MIT"

[dependencies]
bbd-lib = "0.2.0"
chrono = { version = "0.4.30", default-features = false, features = ["clock"] }
chrono-tz = "0.8.3"
iana-time-zone = "0.1.57"
lazy_static = "1.4.0"
