[package]
name = "dtg-lib"
version = "5.8.2"
edition = "2021"
repository = "https://github.com/qtfkwk/dtg"
description = "Date/time library"
license = "MIT"

[dependencies]
bbd-lib = "0.2.1"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
chrono-tz = "0.9.0"
iana-time-zone = "0.1.60"
lazy_static = "1.5.0"
